--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ description = "Rewrite FASTQ headers by reverse-complementing only the i5 (P5/in
 repository = "https://github.com/ssciwr/fastq-fix-i5"
 readme = "README.md"
 authors = ["Liam Keegan <liam@keegan.ch>"]
-keywords = ["fastq", "bioinformatics", "illumina", "sequencing"]
+keywords = ["fastq", "bioinformatics", "sequencing"]
 categories = ["command-line-utilities", "science"]
 edition = "2021"
-rust-version = "1.78"
+rust-version = "1.82"
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
