--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,9 @@ jobs:
   build:
     name: build (stable, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
+    permissions:
+      id-token: write
+      contents: write
     strategy:
       fail-fast: false
       matrix:
@@ -43,11 +46,9 @@ jobs:
       - name: Test
         run: cargo test --verbose
 
-      - run: ls target/release/
-
-      - run: mv target/release/fastq-fix-i5${{ matrix.exe }} fastq-fix-i5-${{ matrix.platform }}${{ matrix.exe }}
-
-      - run: ls
+      - name: Rename binary
+        run: mv target/release/fastq-fix-i5${{ matrix.exe }} fastq-fix-i5-${{ matrix.platform }}${{ matrix.exe }}
+        shell: bash
 
       - name: Upload binary to tagged release
         if: startsWith(github.event.ref, 'refs/tags/')
